--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,33 @@
 <%- include('./partials/header') %>
-    <h1>index</h1>
+    <main>
+        <section class="INDEXsection">
+            <h1>WHAT’S NEXT STARTS</h1>
+            <h2>
+                <div class="punkt"></div>HERE
+            </h2>
+            <div class="videos">
+                <video src="assets/img/indexVedio.mp4" autoplay muted loop></video>
+            </div>
+           
+            <p>STRATEGY, DESIGN, TECHNOLOGY</p>
+
+            <article>
+                <div>
+                    <h3> BASIC® is a branding and digital design agency building products, services, and ecommerce
+                        experiences
+                        that turn cultural values into company value.</h3>
+                </div>
+                <a href="/work">SEE THE WORK</a>
+                <div class="logoo">
+                    <img src="assets/img/logoBG.svg" alt="">
+                </div>
+            </article>
+        </section>
+
+        <section>
+            <h1>FEATURED ENGAGEMENTS</h1>
+           
+        </section>
+    </main>
 
     <%- include('./partials/footer') %>
