--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,7 +7,9 @@
             <li><a href=<%=NavItem.url %> > <%=NavItem.name %> </a></li>
             <%})%>
     </ul>
-    <img class="hamburgerMenu" src="assets/img/menu.svg" alt="">
+    <img class="hamburgerMenu" id="hamburgerMenu" src="assets/img/menu.svg" alt="">
 </nav>
 
 
+
+<script src="assets/js/main.js"></script>
