--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,53 @@
-
+<main>
+<section class="footerSection">
+    <section class="footerSection1">
+        <div></div>
+        <img src="assets/img/footer-logo.svg" alt="">
+        <h3>We collaborate with ambitious brands and people.
+            <span>Let’s connect</span> :)
+        </h3>
+    </section>
+    <section class="stay">
+        <div class="EmailFeld">
+            <h3>● STAY IN THE KNOW</h3>
+            <p>Email Address</p>
+            <input type="email" name="email" id="email">
+        </div>
+        <div>
+            <h2>● Social</h2>
+            <ul>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Facebook</a></li>
+            </ul>
+        </div>
+        <div>
+            <h2>● INITIATIVES</h2>
+            <ul>
+                <li><a href="#">Crafted</a></li>
+                <li><a href="#">Culture Manual</a></li>
+                <li><a href="#">Applied</a></li>
+                <li><a href="#">Brandbeats</a></li>
+                <li><a href="#">Moves</a></li>
+            </ul>
+        </div>
+        <div>
+            <h2>● OFFICES</h2>
+            <ul>
+                <li><a href="#">San Diego – CA</a></li>
+                <li><a href="#">Bay Area – CA</a></li>
+                <li><a href="#">St. Louis – MO</a></li>
+            </ul>
+        </div>
+    </section>
+</section>
+<footer>
+    <p>BASIC®, INC 10 - 20©</p>
+    <p>EASY TO UNDERSTAND, IMPOSSIBLE TO IGNORE.™</p>
+    <p>TERMS, PRIVACY POLICY</p>
+</footer>
+</main>
 
 </body>
 
