--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -264,7 +264,6 @@ li {
 }
 
 /* ///////// FOOTER /////////// */
-
 .footerSection1 div {
   background: url(../img/footer-logo-bg-white.svg) center/cover no-repeat;
   height: 4vh;
@@ -334,4 +333,117 @@ footer {
   justify-content: space-between;
   align-items: center;
 }
+
+
+
+
+/* /////////////  WORK //////////////// */
+#WorkMain{
+  width: 90;
+  margin: 0% 5% 0% 5%;
+}
+#EASY h1{
+  font-size: 100px;
+  width: 50%;
+  margin-top:10%;
+  margin-bottom: 12%;
+  font-family: "scto-bold";
+}
+
+#EASY p{
+  margin: 5% 0% 5% 63%;
+  font-size:25px ;
+  width:37%;
+  font-family: "scto-regular";
+}
+
+#WorkSection{
+  display: flex;
+  border-top: 1px solid #252422;
+  width: 100%;
+  height: 100vh;
+}
+
+.one4 {
+  width: 35%;
+  margin-top: 2%;
+}
+
+
+.one4 li:nth-of-type(1){
+  font-size: 25px;
+  font-family: "scto-medium";
+}
+.one4 li:nth-of-type(2){
+  font-size: 30px;
+  width:50%;
+  padding-top: 40%;
+  font-family: "scto-medium";
+}
+
+.one4 li:nth-of-type(3){
+  font-size: 18px;
+  width:95%;
+  padding-top: 10%;
+  font-family: "scto-regular";
+}
+
+.one4 a {
+  display: inline-block;
+  font-family: "scto-bold";
+  border: 1px solid #252422;
+  padding: 1% 6%;
+  border-radius: 30px;
+  margin-top: 20%;
+}
+.one4 a:hover {
+  color: #fff;
+  background-color: #252422;
+}
+
+.einsFier{
+  display: flex;
+  width: 70%;
+  margin-top: 2%;
+  border-left: 1px solid #252422;
+
+}
+.vedio3 video{
+  width:100%;
+  height: 65vh;
+}
+
+.Beats img{
+ width:100%;
+ height: 65vh;
+
+}
+.vedio3 li:nth-of-type(2) , .Beats li:nth-of-type(2) {
+  font-size: 25px;
+  font-weight: bold;
+  padding-top: 5%;
+  font-family: "scto-bold";
+}
+.vedio3 li:nth-of-type(2){
+  padding-left: 7%;
+}
+
+.vedio3 li:last-child  {
+  font-size:17px;
+  width: 40%;
+  padding-left: 7%;
+  padding-top: 6%;
+  font-family: "scto-medium";
+}
+
+.Beats li:last-child  {
+  font-size:17px;
+  width: 60%;
+  padding-top: 6%;
+  font-family: "scto-medium";
+}
+
+
+
+
 
