--- a/views/work.ejs
+++ b/views/work.ejs
@@ -1,3 +1,133 @@
 <%- include('./partials/header') %>
-    <h1>work</h1>
+    <main id="WorkMain">
+        <section id="EASY">
+            <h1>EASY TO UNDERSTAND. ●IMPOSSIBLE TO IGNORE.</h1>
+            <p>The work we create lives at the intersection of clarity and surprise and positions brands in culture through shared values and ideals.</p>
+        </section>
+
+        <section id="WorkSection">
+            <div class="one4">
+                <ul>
+                    <li>01/04</li>
+                    <li>BRANDED ECOMMERCE</li>
+                    <li>We go beyond best practices and build best-in-class D2C channels that drive commerce, shape culture, and define categories.</li>
+                    <a href="#">Learne more</a>
+                </ul>
+            </div>
+
+            <div class="einsFier">
+                <div class="vedio3">
+                    <ul>
+                        <li>
+                            <video src="assets/img/Google-Store.mp4" autoplay muted loop></video>
+                        </li>
+                        <li>Google Store</li>
+                        <li>AN ECOMMERCE EXPERIENCE HELPING GOOGLE BRING ITS HARDWARE TO PEOPLE ACROSS THE GLOB </li>
+                    </ul>
+                </div>
+                <div class="Beats">
+                        <ul>
+                        <li><img src='assets/img/beatsImg.jpg' alt=''></li>
+                        <li>Beats By Dre</li>
+                        <li>ENGINEERING A DIGITAL DESTINATION THAT MOVES AT THE SPEED OF CULTURE</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+
+
+        <section id="WorkSection">
+            <div class="one4">
+                <ul>
+                    <li>01/04</li>
+                    <li>BRANDED ECOMMERCE</li>
+                    <li>We go beyond best practices and build best-in-class D2C channels that drive commerce, shape culture, and define categories.</li>
+                    <a href="#">Learne more</a>
+                </ul>
+            </div>
+
+            <div class="einsFier">
+                <div class="vedio3">
+                    <ul>
+                        <li>
+                            <video src="assets/img/Google-Store.mp4" autoplay muted loop></video>
+                        </li>
+                        <li>Google Store</li>
+                        <li>AN ECOMMERCE EXPERIENCE HELPING GOOGLE BRING ITS HARDWARE TO PEOPLE ACROSS THE GLOB </li>
+                    </ul>
+                </div>
+                <div class="Beats">
+                        <ul>
+                        <li><img src='assets/img/beatsImg.jpg' alt=''></li>
+                        <li>Beats By Dre</li>
+                        <li>ENGINEERING A DIGITAL DESTINATION THAT MOVES AT THE SPEED OF CULTURE</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+
+        <section id="WorkSection">
+            <div class="one4">
+                <ul>
+                    <li>01/04</li>
+                    <li>BRANDED ECOMMERCE</li>
+                    <li>We go beyond best practices and build best-in-class D2C channels that drive commerce, shape culture, and define categories.</li>
+                    <a href="#">Learne more</a>
+                </ul>
+            </div>
+
+            <div class="einsFier">
+                <div class="vedio3">
+                    <ul>
+                        <li>
+                            <video src="assets/img/Google-Store.mp4" autoplay muted loop></video>
+                        </li>
+                        <li>Google Store</li>
+                        <li>AN ECOMMERCE EXPERIENCE HELPING GOOGLE BRING ITS HARDWARE TO PEOPLE ACROSS THE GLOB </li>
+                    </ul>
+                </div>
+                <div class="Beats">
+                        <ul>
+                        <li><img src='assets/img/beatsImg.jpg' alt=''></li>
+                        <li>Beats By Dre</li>
+                        <li>ENGINEERING A DIGITAL DESTINATION THAT MOVES AT THE SPEED OF CULTURE</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+
+
+        <section id="WorkSection">
+            <div class="one4">
+                <ul>
+                    <li>01/04</li>
+                    <li>BRANDED ECOMMERCE</li>
+                    <li>We go beyond best practices and build best-in-class D2C channels that drive commerce, shape culture, and define categories.</li>
+                    <a href="#">Learne more</a>
+                </ul>
+            </div>
+
+            <div class="einsFier">
+                <div class="vedio3">
+                    <ul>
+                        <li>
+                            <video src="assets/img/Google-Store.mp4" autoplay muted loop></video>
+                        </li>
+                        <li>Google Store</li>
+                        <li>AN ECOMMERCE EXPERIENCE HELPING GOOGLE BRING ITS HARDWARE TO PEOPLE ACROSS THE GLOB </li>
+                    </ul>
+                </div>
+                <div class="Beats">
+                        <ul>
+                        <li><img src='assets/img/beatsImg.jpg' alt=''></li>
+                        <li>Beats By Dre</li>
+                        <li>ENGINEERING A DIGITAL DESTINATION THAT MOVES AT THE SPEED OF CULTURE</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
     <%- include('./partials/footer') %>
