--- a/views/work.ejs
+++ b/views/work.ejs
@@ -37,31 +37,40 @@
 
 
 
+
+
+
+
+
+
+
+
         <section id="WorkSection">
-            <div class="one4">
+            <div class="zwei4">
                 <ul>
-                    <li>01/04</li>
-                    <li>BRANDED ECOMMERCE</li>
-                    <li>We go beyond best practices and build best-in-class D2C channels that drive commerce, shape culture, and define categories.</li>
+                    <li>02/04</li>
+                    <li>DIGITAL PRODUCTS + SERVICES</li>
+                    <li>We identify and create digital products and services that create revenue channels and help brands thrive in the new economy.
+                    </li>
                     <a href="#">Learne more</a>
                 </ul>
             </div>
 
-            <div class="einsFier">
+            <div class="zweiFier">
                 <div class="vedio3">
                     <ul>
                         <li>
-                            <video src="assets/img/Google-Store.mp4" autoplay muted loop></video>
+                            <img src='assets/img/Fender.jpg' alt=''>
                         </li>
-                        <li>Google Store</li>
-                        <li>AN ECOMMERCE EXPERIENCE HELPING GOOGLE BRING ITS HARDWARE TO PEOPLE ACROSS THE GLOB </li>
+                        <li>Fender Academy</li>
+                        <li>A WEB SERVICE TO MAKE SALES TRAINING FEEL LESS LIKE WORK AND MORE LIKE PLAY </li>
                     </ul>
                 </div>
-                <div class="Beats">
+                <div class="Beats2">
                         <ul>
-                        <li><img src='assets/img/beatsImg.jpg' alt=''></li>
-                        <li>Beats By Dre</li>
-                        <li>ENGINEERING A DIGITAL DESTINATION THAT MOVES AT THE SPEED OF CULTURE</li>
+                        <li><img src='assets/img/americanE.jpg' alt=''></li>
+                        <li>American Express</li>
+                        <li>LAYING A DESIGN FOUNDATION FOR FUTURE PRODUCTS AND SERVICES WITH THE OPEN APP</li>
                     </ul>
                 </div>
             </div>
@@ -69,30 +78,30 @@
 
 
         <section id="WorkSection">
-            <div class="one4">
+            <div class="drei4">
                 <ul>
-                    <li>01/04</li>
-                    <li>BRANDED ECOMMERCE</li>
-                    <li>We go beyond best practices and build best-in-class D2C channels that drive commerce, shape culture, and define categories.</li>
+                    <li>03/04</li>
+                    <li>WEBSITES + PLATFORMS</li>
+                    <li>We conceive and create experiences that immerse consumers in the brand through a combination of utility and creativity.</li>
                     <a href="#">Learne more</a>
                 </ul>
             </div>
 
-            <div class="einsFier">
+            <div class="dreiFier">
                 <div class="vedio3">
                     <ul>
                         <li>
-                            <video src="assets/img/Google-Store.mp4" autoplay muted loop></video>
+                            <img src='assets/img/Riot.jpg' alt=''>
                         </li>
-                        <li>Google Store</li>
-                        <li>AN ECOMMERCE EXPERIENCE HELPING GOOGLE BRING ITS HARDWARE TO PEOPLE ACROSS THE GLOB </li>
+                        <li>Riot Games</li>
+                        <li>REVITALIZING THE RIOT GAMES BRAND WITH AN UPGRADED DIGITAL EXPERIENCE </li>
                     </ul>
                 </div>
-                <div class="Beats">
+                <div class="Beats2">
                         <ul>
-                        <li><img src='assets/img/beatsImg.jpg' alt=''></li>
-                        <li>Beats By Dre</li>
-                        <li>ENGINEERING A DIGITAL DESTINATION THAT MOVES AT THE SPEED OF CULTURE</li>
+                        <li><img src='assets/img/softbankImg.jpg' alt=''></li>
+                        <li>SoftBank Vision Fund</li>
+                        <li>BUILDING A DIGITAL DESTINATION FOR THE LEADING TECH INVESTMENT FUND</li>
                     </ul>
                 </div>
             </div>
@@ -101,30 +110,30 @@
 
 
         <section id="WorkSection">
-            <div class="one4">
+            <div class="fier4">
                 <ul>
-                    <li>01/04</li>
-                    <li>BRANDED ECOMMERCE</li>
-                    <li>We go beyond best practices and build best-in-class D2C channels that drive commerce, shape culture, and define categories.</li>
+                    <li>04/04</li>
+                    <li>BRANDING + ADVERTISING</li>
+                    <li>We create identities, platforms, and activations that differentiate brands and position them to matter in culture.</li>
                     <a href="#">Learne more</a>
                 </ul>
             </div>
 
-            <div class="einsFier">
+            <div class="fierFier">
                 <div class="vedio3">
                     <ul>
                         <li>
-                            <video src="assets/img/Google-Store.mp4" autoplay muted loop></video>
+                            <img src='assets/img/nerd.jpg' alt=''>
                         </li>
-                        <li>Google Store</li>
-                        <li>AN ECOMMERCE EXPERIENCE HELPING GOOGLE BRING ITS HARDWARE TO PEOPLE ACROSS THE GLOB </li>
+                        <li>NERD Skincare</li>
+                        <li>DEVELOPING A BRAND THAT BROUGHT SCIENCE TO BEAUTY IN BOLD, UNEXPECTED WAYS </li>
                     </ul>
                 </div>
-                <div class="Beats">
+                <div class="Beats2">
                         <ul>
                         <li><img src='assets/img/beatsImg.jpg' alt=''></li>
-                        <li>Beats By Dre</li>
-                        <li>ENGINEERING A DIGITAL DESTINATION THAT MOVES AT THE SPEED OF CULTURE</li>
+                        <li>Brixton</li>
+                        <li>HONORING THE PAST TO BUILD THE FUTURE OF THE BRIXTON BRAND</li>
                     </ul>
                 </div>
             </div>
