--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -364,30 +364,43 @@ footer {
   height: 100vh;
 }
 
-.one4  {
-  width: 35%;
-  margin-top: 2%;
+
+.vedio3 , .Beats{
+  width: 50%;
 }
 
-.one4 li:nth-of-type(1) {
+.vedio3 video{
+  width:100%;
+  height:60vh;
+}
+
+ 
+.one4 ,.zwei4 ,.drei4 ,.fier4{
+  width: 35%;
+  margin-top: 2%;
+} 
+
+
+.one4 li:nth-of-type(1) ,.zwei4 li:nth-of-type(1) ,.drei4 li:nth-of-type(1) ,.fier4 li:nth-of-type(1) {
   font-size: 25px;
   font-family: "scto-medium";
 }
-.one4 li:nth-of-type(2) {
+
+.one4 li:nth-of-type(2) ,.zwei4 li:nth-of-type(2) ,.drei4 li:nth-of-type(2) ,.fier4 li:nth-of-type(2){
   font-size: 30px;
   width:50%;
   padding-top: 40%;
   font-family: "scto-medium";
 }
 
-.one4 li:nth-of-type(3){
+.one4 li:nth-of-type(3) ,.zwei4 li:nth-of-type(3),.drei4 li:nth-of-type(3) ,.fier4 li:nth-of-type(3){
   font-size: 18px;
   width:95%;
   padding-top: 10%;
   font-family: "scto-regular";
 }
 
-.one4 a ,.zwei4 a ,.drei4 a ,.fier4 a  {
+.one4 a ,.zwei4 a  ,.drei4 a ,.fier4 a{
   display: inline-block;
   font-family: "scto-bold";
   border: 1px solid #252422;
@@ -395,32 +408,23 @@ footer {
   border-radius: 30px;
   margin-top: 20%;
 }
+
 .one4 a:hover ,.zwei4 a:hover, .drei4 a:hover, .fier4 a:hover {
   color: #fff;
   background-color: #252422;
 }
 
-.einsFier{
+.einsFier ,.zweiFier ,.dreiFier ,.fierFier{
   display: flex;
   width: 70%;
   margin-top: 2%;
   border-left: 1px solid #252422;
 
 }
-.vedio3 video{
-  width:83%;
-  height: 65vh;
-}
-
-.Beats img{
- width:100%;
- height: 61vh;
- padding-top: 4%;
-padding-right: 5%;
-}
-.vedio3 ul{
-  padding-left: 5%;
-  padding-right: 0;
+.Beats img {
+  display: flex;
+  width:95%;
+  height: 60vh;
 }
 
 .vedio3 li:nth-of-type(2) , .Beats li:nth-of-type(2) {
@@ -430,17 +434,58 @@ padding-right: 5%;
   font-family: "scto-bold";
 }
 
+.vedio3 li:nth-of-type(2){
+  padding-left: 7%;
+} 
+
+
 .vedio3 li:last-child  {
   font-size:17px;
-  width: 40%;
+  width: 50%;
   padding-top: 6%;
   font-family: "scto-medium";
+  padding-left: 7%;
 }
 
-.vedio3 img{
-  width:100%;
-  height:65vh ;
+.Beats li:last-child {
+  font-family: "scto-medium";
+  font-size:17px;
+  width: 50%;
+  padding-top: 6%;
 }
+
+.PHOTOS ul{
+  padding-left: 5%;
+}
+
+.BEA2 img ,.PHOTOS img{
+  width:96%;
+  height: 60vh;
+}
+
+
+.PHOTOS li:nth-of-type(2) , .BEA2 li:nth-of-type(2) {
+  font-size: 25px;
+  font-weight: bold;
+  padding-top: 5%;
+  font-family: "scto-bold";
+}
+
+.PHOTOS li:last-child  {
+  font-size:17px;
+  width: 50%;
+  padding-top: 6%;
+  font-family: "scto-medium";
+  padding-left: 1%;
+}
+
+.BEA2 li:last-child {
+  font-family: "scto-medium";
+  font-size:17px;
+  width: 50%;
+  padding-top: 6%;
+}
+
 
 
 
