--- a/views/work.ejs
+++ b/views/work.ejs
@@ -27,7 +27,7 @@
                 </div>
                 <div class="Beats">
                         <ul>
-                        <li><img src='assets/img/beatsImg.jpg' alt=''></li>
+                       <li><img src='assets/img/beatsImg.jpg' alt=''></li>
                         <li>Beats By Dre</li>
                         <li>ENGINEERING A DIGITAL DESTINATION THAT MOVES AT THE SPEED OF CULTURE</li>
                     </ul>
@@ -57,7 +57,7 @@
             </div>
 
             <div class="zweiFier">
-                <div class="vedio3">
+                <div class="PHOTOS">
                     <ul>
                         <li>
                             <img src='assets/img/Fender.jpg' alt=''>
@@ -66,7 +66,7 @@
                         <li>A WEB SERVICE TO MAKE SALES TRAINING FEEL LESS LIKE WORK AND MORE LIKE PLAY </li>
                     </ul>
                 </div>
-                <div class="Beats2">
+                <div class="BEA2">
                         <ul>
                         <li><img src='assets/img/americanE.jpg' alt=''></li>
                         <li>American Express</li>
@@ -88,7 +88,7 @@
             </div>
 
             <div class="dreiFier">
-                <div class="vedio3">
+                <div class="PHOTOS">
                     <ul>
                         <li>
                             <img src='assets/img/Riot.jpg' alt=''>
@@ -97,7 +97,7 @@
                         <li>REVITALIZING THE RIOT GAMES BRAND WITH AN UPGRADED DIGITAL EXPERIENCE </li>
                     </ul>
                 </div>
-                <div class="Beats2">
+                <div class="BEA2">
                         <ul>
                         <li><img src='assets/img/softbankImg.jpg' alt=''></li>
                         <li>SoftBank Vision Fund</li>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="fierFier">
-                <div class="vedio3">
+                <div class="PHOTOS">
                     <ul>
                         <li>
                             <img src='assets/img/nerd.jpg' alt=''>
@@ -129,14 +129,14 @@
                         <li>DEVELOPING A BRAND THAT BROUGHT SCIENCE TO BEAUTY IN BOLD, UNEXPECTED WAYS </li>
                     </ul>
                 </div>
-                <div class="Beats2">
+                <div class="BEA2">
                         <ul>
                         <li><img src='assets/img/beatsImg.jpg' alt=''></li>
                         <li>Brixton</li>
                         <li>HONORING THE PAST TO BUILD THE FUTURE OF THE BRIXTON BRAND</li>
                     </ul>
                 </div>
-            </div>
+            </div> 
         </section>
     </main>
     <%- include('./partials/footer') %>
