--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,104 @@
 <%- include('./partials/header') %>
-    <h1>contact</h1>
+<main id="ContactMain">
+    <section id="ContachtSection">
+        <article class="contPhoto"></article>
+
+        <article class="contacts">
+            <div class="BRDIV">
+                <ul>
+                    <li class="BR">B®/ </li>
+                    <li class="CON">CONTACT</li>
+                    <li class="EAS">EASY TO UNDERSTAND. IMPOSSIBLE TO IGNORE.™ BASIC®, INC 10 - 20©</li>
+                </ul>
+            </div>
+            <div class="punkt2"></div>
+            <div class="NEW">
+                <ul>
+                    <li class="NE">NEW BUSINESS</li>
+                    <li class="HI">hi@mail.com</li>
+                    <li class="NE">PRESS</li>
+                    <li class="HI">hi@mail.com</li>
+                </ul>
+
+                <ul>
+                    <li class="NE">GENERAL</li>
+                    <li class="HI2">hi@mail.com</li>
+                    <li class="NE">JOIN US</li>
+                    <li class="HI2">hi@mail.com</li>
+                </ul>
+            </div>
+        </article>
+    </section>
+
+
+    <section id="ContachtSection2">
+        <div class="head">
+            <h4>SEC.</h4>
+            <h4>/A</h4>
+            <h4></h4>
+        </div>
+
+        <section>
+            <article class="offices">OFFICES</article>
+
+            <article >
+                <div class="SA">
+                <div class="SAN">
+                    <img src='assets/img/SD.jpg' alt="">
+                    <h3>01  <span>/03</span></h3>
+                </div>
+                <div class="sandiego">SAN DIEGO (HQ)</div>
+            </div>
+
+            <div class="SA">
+                <div class="SAN">
+                    <img src='assets/img/mtv.jpg' alt="">
+                    <h3>02  <span>/03</span></h3>
+                </div>
+                <div class="sandiego">BAY AREA</div>
+            </div>
+
+
+            <div class="SA">
+                <div class="SAN">
+                    <img src='assets/img/stL.jpg' alt="">
+                    <h3>03  <span>/03</span></h3>
+                </div>
+                <div class="sandiego">ST. LOUIS</div>
+            </div>
+
+
+            </article>
+        </section>
+    </section>
+
+    <section id="ContachtSection3">
+        <div class="head">
+            <h4>SEC.</h4>
+            <h4>/B</h4>
+            <h4></h4>
+        </div>
+
+        <article id="FollowArticle">
+        <div class="follow">FOLLOW</div>
+        <div class="social">
+            <h2>Social</h2>
+            <ul>
+                <li><a href="#">Instagram</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Facebook</a></li>
+            </ul>
+        </div>
+        
+            <div class="EmailFeld">
+                <h3>STAY IN THE KNOW</h3>
+                <p>Email Address</p>
+                <input type="email" name="email" id="email">
+            </div>
+            </article>
+    </section>
+
+
+</main>
     <%- include('./partials/footer') %>
