--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,14 +1,166 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>
-        <%=title %>
-    </title>
+    <%- include('./partials/header2') %>
+
+    <main id="AboutMain">
+        <header id="AboutHeader">
+            <div class="WE">
+                <p> WE TURN CULTURAL VALUE </p>
+            </div>
+            <div class="Into">
+                <h1><span class="punkt4"></span> INTO COMPANY VALUE</h1>
+                <p>BASIC® is an independent branding & experience design company working at the intersection of culture, design, and technology. We value our craft, have a deep passion for progression, and exist to solve challenges for brands we believe in. Since the beginning, our mission has been to do great work and to have a great time doing it. We believe our mission has guided us well.</p>
+            </div>
+
+        </header>
+
+        <section id="AboutSection">
+            <h1>BASIC®</h1>
+
+            <div class="head4">
+                <h4>SEC.</h4>
+                <h4>/A</h4>
+                <h4></h4>
+            </div>
+        </section>
+
+        <section id="AboutSection2">
+            <article class="AGEN">
+                <h1>AGENCY SNAPSHOT</h1>
+            </article>
+
+            <article class="PEOP">
+                <div>
+                    <h1>PEOPLE</h1>
+                    <h2>100+</h2>
+                    <p>We're a world-class team of diverse individuals who are here to do great work as well as be great to work with. Explore our culture manual.</p>
+
+                    <h1>YEARS</h1>
+                    <h2>10</h2>
+                    <p>While we’re proud of our history and our accomplishments, we’re loyal to our future and not our past.
+                    </p>
+
+                    <h1 class="Service">SERVICES</h1>
+                    <h2>05</h2>
+                    <p>Strategy. Brand Experience. Digital Experience. Content. Technology. We’re uniquely built to build brands that matter in culture.
+                    </p>
+
+                </div>
+                <div>
+                    <h1>OFFICES</h1>
+                    <h2>03</h2>
+                    <p>San Diego, The Bay Area, and St. Louis. Feel free to reach out and say hello :)
+                    </p>
+
+                    <h1 class="Growth">GROWTH</h1>
+                    <h2>168%</h2>
+                    <p>As Adweek’s 18th fastest growing agency, we’ve strengthened our company with new leadership, talent, and clients the past two years. We’re hiring btw.</p>
+
+                    <h1>RANKING</h1>
+                    <h2>01</h2>
+                    <p>Within the mobile and website related categories, no other agency has been recognized by the Webby Awards more than us the past 3 years. Explore our work.
+                    </p>
+                </div>
+            </article>
+        </section>
+
+
+        <section>
+            <div class="head4">
+                <h4>SEC.</h4>
+                <h4>/B</h4>
+                <h4></h4>
+            </div>
+        </section>
+
+        <section id="AboutSection2">
+                <article class="CAPA">
+                    <h1>CAPABILITIES</h1>
+            </article>
+
+            <article class="STRA">
+                <div>
+                    <h1>STRATEGIC PLANNING</h1>
+                    <h2>Customer Experience</h2>
+                    <h2>Consumer Insights + Trends</h2>
+                    <h2>Omnichannel + D2C</h2>
+                    <h2>Product + Service Vision</h2>
+                    <h2>Go-To-Market Planning</h2>
+                    <h2>Data Science + Analytics</h2>
+
+
+                    <h1 class="BRAND">BRAND EXPERIENCE</h1>
+                    <h2>Identity + Positioning</h2>
+                    <h2>Visual Language + Art Direction</h2>
+                    <h2>Design Production + Execution</h2>
+                    <h2>Brand Messaging</h2>
+                    <h2>Brand Guidelines + Playbooks</h2>
+                    <h2>Campaign Development</h2>
+
+                    <h1 class="BRAND">CONTENT CREATION</h1>
+                    <h2>Content Strategy</h2>
+                    <h2>Art Direction</h2>
+                    <h2>Photography</h2>
+                    <h2>Video Production</h2>
+                    <h2>3D / Motion Graphics</h2>
+                    <h2>Copywriting</h2>
+                </div>
+
+
+                <div>
+                    <h1>USER EXPERIENCE</h1>
+                    <h2>Experience Strategy</h2>
+                    <h2>eCommerce + Websites</h2>
+                    <h2>Digital Product + Services</h2>
+                    <h2>Design Systems + Style Guides</h2>
+                    <h2>iOS + Android Applications</h2>
+                    <h2>Prototyping & Optimizatione</h2>
+
+                    <h1 class="BRAND">TECHNOLOGY</h1>
+                    <h2>Technical Discovery</h2>
+                    <h2>Technical Architecture</h2>
+                    <h2>Full-Stack Development</h2>
+                    <h2>CMS Implementation</h2>
+                    <h2>Quality Assurance</h2>
+                    <h2>Campaign Development</h2>
+                </div>
+            </article>
+        </section>
+
+
+        <section>
+            <div class="head4">
+                <h4>SEC.</h4>
+                <h4>/C</h4>
+                <h4></h4>
+            </div>
+        </section>
+
+
+        <section id="AboutSection3">
+            <div class="awards">
+                <h1>AWARDS</h1>
+            </div>
+            <div class="While">
+                <p>While results are what matter most, we believe awards bring value and recognition to organizations as well as individuals.</p>
+                <a href="/about">full awardslist</a>
+            </div>
+        </section>
+
+
+        <section id="AboutSection4">
+            <div>
+                <h2>WEBBY AWARDS /40</h2>
+                <h2>ADWEEK /01</h2>
+                <h2>AWWWARDS /22</h2>
+                <h2>D&AD /01</h2>
+                <h2>ONE SHOW /03</h2>
+                <h2>THE FWA /07</h2>
+            </div>
+            <div></div>
+        </section>
+        <script src="assets/js/main.js"></script> 
+    </main>
     
-    <script src="assets/js/main.js"></script>
+   
 
-    <%- include('./partials/footer') %>
+    <%- include('./partials/footer2') %>
