--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22,11 +22,11 @@
   background-color: #252422;
 }
 
-
 a {
     text-decoration: none;
     color: inherit;
 }
+
 li {
     list-style-type: none;
 }
@@ -272,6 +272,197 @@ li {
   width: 30%;
 }
 
+
+
+
+/* ////////////////////  ABOUT //////////////// */
+#AboutMain{
+  width: 90%;
+  margin-right: 5%;
+  margin-left: 5%;
+  color: #f9cdcd;
+  min-height: 600vh;
+}
+#AboutHeader{
+  display: flex;
+  margin-top: 5%;
+}
+
+#AboutHeader div{
+  width: 50%;
+}
+
+.WE p{
+  font-size: 90px;
+  width: 70%;
+  font-family: "scto-medium";
+}
+
+.Into h1{
+  font-size: 90px;
+  font-family: "scto-medium";
+  padding-top: 35%;
+}
+
+.punkt4{
+  background: #f9cdcd;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.Into p{
+  font-size: 35px;
+  font-family: "scto-medium";
+}
+
+#AboutSection h1{
+  font-size: 150px;
+  border-top: 1px solid #f9cdcd;
+  border-bottom: 1px solid #f9cdcd;
+  font-family: "scto-medium";
+ 
+}
+
+.head4{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1%;
+  font-family: "scto-medium";
+}
+.head4 h4:nth-of-type(2){
+  margin-left: -35%;
+}
+
+.head4 h4:nth-of-type(3){
+  background-color: #f9cdcd;
+  height: 2vh;
+  width: 2vh;
+  border-radius: 50%;
+}
+
+#AboutSection2{
+  display: flex;
+  padding-top: 5%;
+  border-bottom: 1px solid #f9cdcd;
+}
+
+.AGEN ,.CAPA{ 
+  width: 30%;
+}
+.AGEN h1, .CAPA h1 {
+  font-size: 40px;
+  font-family: "scto-medium";
+}
+
+.PEOP ,.STRA{
+  width: 70%;
+  display: flex;
+}
+.PEOP div ,.STRA div{
+  width: 50%;
+}
+
+.PEOP h1 ,.STRA h1{
+  font-size: 30px;
+  font-family: "scto-medium";
+  padding-bottom: 7%;
+}
+
+.PEOP h2{
+  font-size: 70px;
+  font-family: "scto-medium";
+  padding-bottom: 7%;
+}
+
+.PEOP p{
+  font-size: 20px;
+  font-family: "scto-medium";
+  padding-bottom: 10%;
+  width: 80%;
+}
+
+.Growth{
+  padding-top: 5%;
+}
+
+.Service{
+  padding-top: 10%;
+}
+
+.STRA h2{
+  font-size: 18px;
+  font-family: "scto-medium";
+  padding-bottom: 4%;
+}
+
+.BRAND{
+  padding-top: 10%;
+}
+
+
+#AboutSection3{
+  display: flex;
+  padding-top: 5%;
+}
+.awards{
+  width: 30%;
+}
+.While{
+  width: 60%;
+}
+
+.awards h1{
+  font-size: 40px;
+  font-family: "scto-medium";
+  padding-bottom: 7%;
+}
+
+/* #AboutSection3 div{
+  width: 50%;
+} */
+
+.While p{
+  font-size: 50px;
+  font-family: "scto-medium";
+  padding-left: 5%;
+  padding-bottom: 10%;
+}
+
+.While a{
+  margin-left: 5%;
+  display: inline-block;
+  font-family: "scto-bold";
+  border: 1px solid #f9cdcd;
+  padding: 1% 6%;
+  border-radius: 30px;
+}
+
+#AboutSection4{
+  display: flex;
+  padding-top: 5%;
+}
+
+#AboutSection4 h2{
+  font-size: 70px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* ///////// FOOTER /////////// */
 .footerSection1 div {
   background: url(../img/footer-logo-bg-white.svg) center/cover no-repeat;
@@ -349,7 +540,7 @@ li {
 }
 
 .footer2Section1 div {
-  background: url(../img/footer-logo.svg) center/cover no-repeat;
+  background: url(../img/arrow-black.svg) center/cover no-repeat;
   height: 4vh;
   width: 5.3%;
   display: none;
