--- a/views/about.ejs
+++ b/views/about.ejs
@@ -13,6 +13,53 @@
 
         </header>
 
+
+
+        <section id="SectionImages">
+            <article class="ArticleImages"> <p> EASY TO UNDERSTAND. IMPOSSIBLE TO IGNORE.™ BASIC®, INC 10 - 20©</p> </article>
+
+            <article class="ArticleImages2">
+                <figure class="F1"  onmouseover="F1(this)" onmouseout="Z1(this)">
+                    <img src="assets/img/aboutImg1.jpg" alt="agency-photo">
+                    <figcaption>(01)</figcaption>
+                </figure>
+
+                <figure class="F2"  onmouseover="F2(this)" onmouseout="Z2(this)">
+                    <img src="assets/img/aboutImg2.jpg" alt="agency-photo">
+                    <figcaption>(02)</figcaption>
+                </figure>
+
+                <figure class="F3"  onmouseover="F3(this)" onmouseout="Z3(this)">
+                    <img src="assets/img/aboutImg3.jpg" alt="agency-photo">
+                    <figcaption>(03)</figcaption>
+                </figure>
+
+                <figure class="F4"  onmouseover="F4(this)" onmouseout="Z4(this)">
+                    <img src="assets/img/aboutImg4.jpg" alt="agency-photo">
+                    <figcaption>(04)</figcaption>
+                </figure>
+            </article>
+        </section>
+
+
+
+
+        <!-- <section class="about-section">
+            <p>EASY TO UNDERSTAND. IMPOSSIBLE TO IGNORE.™ BASIC®, INC 10 - 20©
+            </p>
+            <article class="about-fig">
+               
+            </article>
+        </section> -->
+
+
+
+
+
+
+
+
+
         <section id="AboutSection">
             <h1>BASIC®</h1>
 
